Fixes the spacing on mobile homepage

--- a/app/assets/stylesheets/partials/_home.scss
+++ b/app/assets/stylesheets/partials/_home.scss
@@ -6,6 +6,11 @@
       left: -15px;
     }
 
+    .content-section {
+      h2 { margin-top: rem-calc(30); }
+      p, .button { margin-bottom: rem-calc(30); }
+    }
+
     .companies {
       padding-top: rem-calc(24);
       padding-right: rem-calc(64);
@@ -48,6 +53,7 @@
     .companies ul li { width: 33%; }
 
     section.content-section {
+
       &.x-small, &.small {
         padding-top: rem-calc(0);
         padding-bottom: rem-calc(50);
@@ -69,6 +75,10 @@
     section.content-section {
       padding-top: rem-calc(150);
       padding-bottom: rem-calc(150);
+
+      h2 { margin-top: 0; }
+      p, .button { margin-bottom: 0; }
+      .button { margin-top: rem-calc(30); }
 
       &.small {
         padding-top: rem-calc(100);
